# Django_first_projeckt

./: .env.example  .gitignore  arguments.txt  dump.json  pyproject.toml  requirements.txt  Текстовый документ.txt
barbershop/: settings.py  urls.py
core/: admin.py  apps.py  data.py  forms.py  models.py  signals.py  telegram_bot.py  test_minimal.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_master_order_master.py  0003_service_master_services.py  0004_review.py  0005_order_services_alter_master_email.py  0006_order_status_idx_order_created_at_idx.py  0007_remove_order_status_idx_remove_order_created_at_idx_and_more.py  0008_alter_service_duration.py  0009_alter_review_is_published.py
core/static/css/: main.css
core/static/js/: main.js  reviews.js
core/templates/: order_detail.html  orders_list.html  thanks.html
core/templates/core/: landing.html  order_create.html  order_detail.html  orders_list.html  review_form.html  service_create.html  service_list.html  thanks_for_the_review.html
core/templates/core/includes/: master_card.html  menu.html  order_card.html  review_card.html  service_card_include.html
core/templatetags/: order_tags.py
static/: main.css
templates/: base.html  landing.html
users/: backends.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  logout.html  password_change_form.html  profile_detail.html  profile_update_form.html  register.html
